<resources>
    <string name="app_name">projet_fin_formation</string>
    <string name="password">Password</string>
    <string name="sing_up">Sing up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="e_mail">E-mail</string>
    <string name="email">email</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_acount_sign_in">Don\'t have acount? Sign In ?</string>
    <string name="sign_in">Sign in</string>
    <string name="Sign_in">sign_in</string>
    <string name="Login">Login</string>
    <string name="Password">password</string>
    <string name="LOGIN">LOGIN</string>
    <string name="sign_up">Sign Up ?</string>
    <string name="taejir">TAEJIR</string>
    <string name="profil">Profil</string>
    <string name="home">Home</string>
    <string name="Message">Messsage</string>
    <string name="Collection">Collection</string>
    <string name="others">Others</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="Déconnecter">Déconnecter</string>
    <string name="déconnecter">Déconnecter</string>
    <string name="welcome">Welcome</string>
    <string name="tech_projects">Tech Projects</string>
    <string name="techprojects">tech projects</string>
    <string name="tech_project">tech projects</string>

    <string name="navigation_draw_open">open navigation draw </string>
    <string name="navigation_draw_close">close navigation draw</string>
    <string name="change_photo">change photo</string>
    <string name="back">back</string>
    <string name="todo">TODO</string>


    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>