<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/img3"
    tools:context=".MainActivity"

    >

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="260dp"
        android:layout_marginTop="200dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="40dp"
        android:background="@drawable/costum_editext"

        >

        <LinearLayout
            android:layout_width="345dp"
            android:layout_height="329dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="-24dp">

            <TextView
                android:id="@+id/tsignin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-1dp"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="26sp"
                android:textStyle="bold"


                />

            <EditText
                android:id="@+id/login"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/costum_editext"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/Login"
                android:inputType="textEmailAddress"
                android:padding="9dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/gris" />

            <EditText
                android:id="@+id/password"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/costum_editext"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:padding="9dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/gris" />

            <Button
                android:id="@+id/button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/purple"
                android:text="@string/LOGIN"
                android:textSize="18sp"
                app:cornerRadius="20dp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/purple" />

    <TextView
        android:id="@+id/emp"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="40dp"
        android:text="Admin"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>
