<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/purple"
    tools:context=".inscription_employees"


    >



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="560dp"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp"
        android:background="@color/black"
        app:cardBackgroundColor="#FFFFFF"


        >

        <LinearLayout
            android:layout_width="345dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="100dp"
                android:layout_height="77dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/gif"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/inscription"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="@string/sing_up"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="36sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"

                />

            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:autofillHints=""
                android:background="@drawable/costum_editext"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="9dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/gris" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/costum_editext"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="9dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/gris"
                android:autofillHints="" />

            <EditText
                android:id="@+id/Confpassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/costum_editext"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="8dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="9dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/gris"


                android:autofillHints="" />

            <EditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/costum_editext"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:padding="9dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/gris"

                android:autofillHints="" />

            <Button
                android:id="@+id/button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/purple"
                android:text="@string/login"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                android:layout_gravity="center"
                />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/emp"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="40dp"
        android:text="Employées"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>

